# fortune

./: .gitignore  Attributions.txt  CMakeLists.txt  fortune.db-journal
fortune_files/: aphorisms  computers  einsteins  nietzsche  startrek
plasmoid/: metadata.desktop
plasmoid/contents/config/: config.qml  config.qmlc  main.xml
plasmoid/contents/images/: fortune-cookie.svgz
plasmoid/contents/ui/: CompactRepresentation.qml  CompactRepresentation.qmlc  ConfigColors.qml  ConfigRatios.qmlc  ConfigSources.qml  ConfigSources.qml.backup.20180914  ConfigSources.qml.tooComplex  ConfigSources.qmlc  ConfigSources.qmlc.backup.20180914  FullRepresentation.qml  FullRepresentation.qml.svgFail  FullRepresentation.qmlc  lorem.txt  main.qml  main.qmlc  query.sql
plasmoid/contents/ui/code/: count.sql  fortuneQuery.sh  getCounts.sh  interval.js  moment.jsc  newdb.db  query.sql  query.sql.backup.20180914  tabs.sql  testline.txt
plasmoid/contents/ui/config/: .Larry_Wall.jpg-autosave.kra  Attributions.txt  ConfigAbout.qml  ConfigColors.qml  ConfigSources.qml  ConfigTime.qml  ExampleRectangle.qml  Richard_Stallman.JPG~  about.txt  initialColors.qml
unix2database/: CMakeLists.txt  main.cpp
